build/tests/math_wrappers/c47.h

typedef bool bool_t;
typedef int16_t calcRegister_t;
typedef struct {
  uint8_t bytes[16];
} decQuad;
typedef decQuad real34_t;
typedef struct {
  real34_t real;
  real34_t imag;
} complex34_t;
typedef struct {
  uint16_t matrixRows;
  uint16_t matrixColumns;
} matrixHeader_t;
typedef struct {
  matrixHeader_t header;
  real34_t matrixElements[4];
} real34Matrix_t;
typedef struct {
  matrixHeader_t header;
  complex34_t matrixElements[4];
} complex34Matrix_t;
typedef struct {
  uint8_t unused;
} font_t;
typedef int irfracOption_t;
typedef struct {
  int32_t digits;
  int32_t exponent;
  uint8_t bits;
  uint16_t lsu[25];
} real_t;
enum rounding {
  DEC_ROUND_CEILING,
  DEC_ROUND_UP,
  DEC_ROUND_HALF_UP,
  DEC_ROUND_HALF_EVEN,
  DEC_ROUND_HALF_DOWN,
  DEC_ROUND_DOWN,
  DEC_ROUND_FLOOR,
  DEC_ROUND_05UP,
  DEC_ROUND_MAX,
};
typedef struct {
  int32_t digits;
  int32_t emax;
  int32_t emin;
  enum rounding round;
  uint32_t traps;
  uint32_t status;
  uint8_t clamp;
} realContext_t;
#define TI_PERC 68
#define TI_PERCD 69
#define real34SetPositiveSign(operand) ((operand)->bytes[15] &= 0x7f)
extern realContext_t ctxtReal34;
#define setRegisterLongIntegerSign(reg, sign) setRegisterTag((reg), (sign))
void elementwiseRema(void (*func)(void));
void elementwiseRemaReal(void (*func)(void));
void processRealComplexMonadicFunction(void (*realf)(void), void (*complexf)(void));
void processRealComplexDyadicFunction(void (*realf)(void), void (*complexf)(void));
void processIntRealComplexMonadicFunction(void (*realf)(void),
                                         void (*complexf)(void),
                                         void (*shortintf)(void),
                                         void (*longintf)(void));
void processIntRealComplexDyadicFunction(void (*realf)(void),
                                        void (*complexf)(void),
                                        void (*shortintf)(void),
                                        void (*longintf)(void));
void convertLongIntegerRegisterToTimeRegister(calcRegister_t source, calcRegister_t destination);
void *getRegisterDataPointer(calcRegister_t reg);
void setRegisterTag(calcRegister_t reg, uint32_t tag);
void convertShortIntegerRegisterToReal34Register(calcRegister_t source, calcRegister_t destination);
void fnSwapXY(uint16_t unusedButMandatoryParameter);
void moreInfoOnError(const char *msg1, const char *msg2, const char *msg3, const char *msg4);
void longIntegerRegisterToDisplayString(calcRegister_t reg, char *buffer, int buffer_length, int screen_width, int limit, bool_t allow_large);
int16_t stringGlyphLength(const char *value);
void xcopy(void *destination, const void *source, size_t length);
void fractionToDisplayString(calcRegister_t regist, char *displayString);
void shortIntegerToDisplayString(calcRegister_t regist, char *displayString, bool_t determineFont, uint8_t baseOverride);
void real34ToDisplayString(const real34_t *real34, uint32_t tag, char *displayString, const font_t *font, int16_t maxWidth, int16_t displayHasNDigits, bool_t limitExponent, bool_t frontSpace, irfracOption_t limitIrfrac);
void complex34ToDisplayString(const complex34_t *complex34, char *displayString, const font_t *font, int16_t maxWidth, int16_t displayHasNDigits, bool_t limitExponent, bool_t frontSpace, irfracOption_t limitIrfrac, uint16_t tagAngle, bool_t tagPolar);
void dateToDisplayString(calcRegister_t regist, char *displayString);
void timeToDisplayString(calcRegister_t regist, char *displayString, bool_t ignoreTDisp);
void real34MatrixToDisplayString(calcRegister_t regist, char *displayString);
void complex34MatrixToDisplayString(calcRegister_t regist, char *displayString);
void convertComplex34MatrixRegisterToComplex34Matrix(calcRegister_t reg, complex34Matrix_t *matrix);
void elementwiseRealRema(void (*func)(void));
void elementwiseCxmaReal(void (*func)(void));
void elementwiseRealCxma(void (*func)(void));
void addRealMatrices(const real34Matrix_t *y, const real34Matrix_t *x, real34Matrix_t *res);
void subtractRealMatrices(const real34Matrix_t *y, const real34Matrix_t *x, real34Matrix_t *res);
void addComplexMatrices(const complex34Matrix_t *y, const complex34Matrix_t *x, complex34Matrix_t *res);
void subtractComplexMatrices(const complex34Matrix_t *y, const complex34Matrix_t *x, complex34Matrix_t *res);
extern char *tmpString;
const real_t *z47_math_wrappers_const_180(void);
const real_t *z47_math_wrappers_const_2e6(void);
const real_t *z47_math_wrappers_const_1oneE(void);
const real_t *z47_math_wrappers_const_90(void);
const real_t *z47_math_wrappers_const_ln2(void);
const real_t *z47_math_wrappers_const_ln10(void);
const real_t *z47_math_wrappers_const_piOn4(void);
const real_t *z47_math_wrappers_const_3piOn4(void);
const real_t *z47_math_wrappers_const_piOn2(void);
const real_t *z47_math_wrappers_const_pi(void);
const real_t *z47_math_wrappers_const_plus_infinity(void);
const real_t *z47_math_wrappers_const_minus_infinity(void);
void z47_math_wrappers_minus_one_power_long_integer(void);
void z47_math_wrappers_integer_part_long_integer(void);
void z47_math_wrappers_integer_part_short_integer(void);
void z47_math_wrappers_fractional_part_long_integer(void);
void z47_math_wrappers_fractional_part_short_integer(void);
void z47_math_wrappers_fractional_part_real(void);
int32_t z47_math_wrappers_small_base_power_long_integer(uint32_t baseValue);
void z47_math_wrappers_report_int_pow_real_domain_error(void);
void z47_math_wrappers_report_exp_real_domain_error(void);
void z47_math_wrappers_report_eulers_formula_complex_domain_error(void);
void z47_math_wrappers_report_eulers_formula_real_domain_error(void);
extern const font_t standardFont;
extern const font_t numericFont;
extern uint8_t roundingMode;
extern const enum rounding roundingModeTable[7];
void z47_math_wrappers_seed_defaults(uint64_t *seed, uint64_t *seq);
void z47_math_wrappers_do_int_random_i(void);