zig_src/mathematics/math_command_wrappers_runtime.zig


    pub inline fn fnAtan2(parameter: u16) void {
        raw_fnAtan2(parameter);
    }
    const raw_fnIsConverged: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnIsConverged" });
    const raw_fnCheckType: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckType" });
    const raw_fnCheckReal: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckReal" });
    const raw_fnCheckNumber: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckNumber" });
    const raw_fnCheckAngle: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckAngle" });
    const raw_fnCheckMatrix: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckMatrix" });
    const raw_fnCheckMatrixSquare: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckMatrixSquare" });
    const raw_fnCheckForZero: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckForZero" });
    const raw_fnCheckIsVect2d: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckIsVect2d" });
    const raw_fnCheckIsVect3d: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckIsVect3d" });
    const raw_fnCheckNaN: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckNaN" });
    const raw_fnCheckInfinite: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckInfinite" });
    const raw_fnCheckSpecial: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckSpecial" });
    const raw_fnCheckPlusZero: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckPlusZero" });
    const raw_fnCheckMinusZero: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCheckMinusZero" });
    const raw_fnGetType: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnGetType" });
    const raw_fnDblDivide: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnDblDivide" });
    const raw_fnDblDivideRemainder: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnDblDivideRemainder" });
    const raw_fnPercentMRR: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnPercentMRR" });
    const raw_fnPercentPlusMG: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnPercentPlusMG" });
    const raw_fnPercentT: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnPercentT" });
    const raw_fnDeltaPercent: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnDeltaPercent" });
    const raw_fnFib: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnFib" });
    const raw_fnLINPOL: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnLINPOL" });
    const raw_fnCross: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnCross" });
    const raw_fnDot: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnDot" });
    const raw_fnLogXY: RetainedU16Fn = @extern(RetainedU16Fn, .{ .name = legacy_prefix ++ "fnLogXY" });
};
pub extern fn z47_math_wrappers_const_2e6() *const real_t;
pub extern fn z47_math_wrappers_const_90() *const real_t;
pub extern fn z47_math_wrappers_const_180() *const real_t;
pub extern fn z47_math_wrappers_const_1oneE() *const real_t;
pub extern fn z47_math_wrappers_const_ln2() *const real_t;
pub extern fn z47_math_wrappers_const_ln10() *const real_t;
pub extern fn z47_math_wrappers_const_piOn4() *const real_t;
pub extern fn z47_math_wrappers_const_3piOn4() *const real_t;
pub extern fn z47_math_wrappers_const_piOn2() *const real_t;
pub extern fn z47_math_wrappers_const_3piOn2() *const real_t;
pub extern fn z47_math_wrappers_const_pi() *const real_t;
pub extern fn z47_math_wrappers_const75_piOn4() *const real_t;
pub extern fn z47_math_wrappers_const75_piOn2() *const real_t;
pub extern fn z47_math_wrappers_const75_pi() *const real_t;
pub extern fn z47_math_wrappers_const_plus_infinity() *const real_t;
pub extern fn z47_math_wrappers_const_minus_infinity() *const real_t;
pub extern fn z47_math_wrappers_minus_one_power_long_integer() void;
pub extern fn z47_math_wrappers_integer_part_long_integer() void;
pub extern fn z47_math_wrappers_integer_part_short_integer() void;
pub extern fn z47_math_wrappers_fractional_part_long_integer() void;
pub extern fn z47_math_wrappers_fractional_part_short_integer() void;
pub extern fn z47_math_wrappers_fractional_part_real() void;
pub extern fn z47_math_wrappers_gcd_int() void;
pub extern fn z47_math_wrappers_gcd_short_integer() void;
pub extern fn z47_math_wrappers_lcm_int() void;
pub extern fn z47_math_wrappers_lcm_short_integer() void;
pub extern fn z47_math_wrappers_fact_real() void;
pub extern fn z47_math_wrappers_fact_cplx() void;
pub extern fn z47_math_wrappers_fact_long_integer() void;
pub extern fn z47_math_wrappers_fact_short_integer() void;
pub extern fn z47_math_wrappers_mod_real() void;
pub extern fn z47_math_wrappers_mod_short_integer() void;
pub extern fn z47_math_wrappers_mod_long_integer() void;
pub extern fn z47_math_wrappers_rmd_real() void;
pub extern fn z47_math_wrappers_rmd_short_integer() void;
pub extern fn z47_math_wrappers_rmd_long_integer() void;
pub extern fn z47_math_wrappers_neighb_real() void;
pub extern fn z47_math_wrappers_neighb_short_integer() void;
pub extern fn z47_math_wrappers_neighb_long_integer() void;
pub extern fn z47_math_wrappers_small_base_power_long_integer(base_value: u32) i32;
pub extern fn z47_math_wrappers_report_int_pow_real_domain_error() void;
pub extern fn z47_math_wrappers_report_exp_real_domain_error() void;
pub extern fn z47_math_wrappers_report_arcsin_real_domain_error() void;
pub extern fn z47_math_wrappers_report_arccos_real_domain_error() void;
pub extern fn z47_math_wrappers_report_arctan_real_domain_error() void;
pub extern fn z47_math_wrappers_report_arccosh_real_domain_error() void;
pub extern fn z47_math_wrappers_report_arctanh_real_positive_one_domain_error() void;
pub extern fn z47_math_wrappers_report_arctanh_real_negative_one_domain_error() void;
pub extern fn z47_math_wrappers_report_arctanh_real_domain_error() void;
pub extern fn z47_math_wrappers_report_eulers_formula_complex_domain_error() void;
pub extern fn z47_math_wrappers_report_eulers_formula_real_domain_error() void;
pub extern fn z47_math_wrappers_report_sign_real_nan_error() void;
pub extern fn z47_math_wrappers_report_invert_real_divide_by_zero_error() void;
pub extern fn z47_math_wrappers_report_sinh_cosh_real_domain_error() void;
pub extern fn z47_math_wrappers_report_tanh_real_domain_error() void;
pub extern fn z47_math_wrappers_report_square_real_domain_error() void;
pub extern fn z47_math_wrappers_report_tan_real_pole_error() void;
pub extern fn z47_math_wrappers_report_cube_real_domain_error() void;
pub extern fn z47_math_wrappers_report_sinc_real_domain_error() void;
pub extern fn z47_math_wrappers_report_sincpi_real_domain_error() void;
pub extern fn z47_math_wrappers_report_exp_m1_real_domain_error() void;
pub extern fn z47_math_wrappers_report_ln_p1_real_zero_domain_error() void;
pub extern fn z47_math_wrappers_report_ln_p1_real_infinite_domain_error() void;
pub extern fn z47_math_wrappers_report_ln_p1_real_negative_domain_error() void;
pub extern fn z47_math_wrappers_report_ln_p1_cplx_zero_domain_error() void;
pub extern fn moreInfoOnError(msg1: [*:0]const u8, msg2: ?[*:0]const u8, msg3: ?[*:0]const u8, msg4: ?[*:0]const u8) void;
pub extern fn z47_math_wrappers_seed_defaults(seed: *u64, seq: *u64) void;
pub extern fn z47_math_wrappers_do_int_random_i() void;

// Extern surface for the Zig-owned addition/subtraction dispatch cells
// (math_addition_cells_owned.zig / math_subtraction_cells_owned.zig). These
// resolve against the C product surface still in the dispatch bridge or the
// frontier/state owners; the cell owners are excluded from the fake-harness
// parity lanes.
pub extern fn decQuadSubtract(res: *real34_t, operand1: *const real34_t, operand2: *const real34_t, context: *realContext_t) *real34_t;

pub inline fn real34SubtractMacro(operand1: *const real34_t, operand2: *const real34_t, res: *real34_t) void {
    _ = decQuadSubtract(res, operand1, operand2, &ctxtReal34);
}

pub extern fn convertShortIntegerRegisterToReal34Register(source: calcRegister_t, destination: calcRegister_t) void;
pub extern fn convertComplex34MatrixRegisterToComplex34Matrix(regist: calcRegister_t, matrix: *complex34Matrix_t) void;

pub const font_t = opaque {};
pub extern const standardFont: font_t;
pub extern const numericFont: font_t;
pub extern var tmpString: [*c]u8;
pub extern var roundingMode: u8;
pub extern const roundingModeTable: [7]rounding_t;
pub extern fn fnSwapXY(unused_but_mandatory_parameter: u16) void;
pub extern fn convertLongIntegerRegisterToTimeRegister(source: calcRegister_t, destination: calcRegister_t) void;
pub extern fn elementwiseRealRema(realf: VoidCallback) void;
pub extern fn elementwiseCxmaReal(cplxf: VoidCallback) void;
pub extern fn elementwiseRealCxma(cplxf: VoidCallback) void;
pub extern fn addRealMatrices(y: *const real34Matrix_t, x: *const real34Matrix_t, res: *real34Matrix_t) void;
pub extern fn subtractRealMatrices(y: *const real34Matrix_t, x: *const real34Matrix_t, res: *real34Matrix_t) void;
pub extern fn addComplexMatrices(y: *const complex34Matrix_t, x: *const complex34Matrix_t, res: *complex34Matrix_t) void;
pub extern fn subtractComplexMatrices(y: *const complex34Matrix_t, x: *const complex34Matrix_t, res: *complex34Matrix_t) void;
pub extern fn stringGlyphLength(str: [*c]const u8) i32;
pub extern fn xcopy(dest: ?*anyopaque, source: ?*const anyopaque, n: u32) ?*anyopaque;
pub extern fn longIntegerRegisterToDisplayString(regist: calcRegister_t, display_string: [*c]u8, str_lg: i32, max_width: i16, max_exp: i16, allow_large_li: bool) void;
pub extern fn timeToDisplayString(regist: calcRegister_t, display_string: [*c]u8, ignore_t_disp: bool) void;
pub extern fn dateToDisplayString(regist: calcRegister_t, display_string: [*c]u8) void;
pub extern fn real34MatrixToDisplayString(regist: calcRegister_t, display_string: [*c]u8) void;
pub extern fn complex34MatrixToDisplayString(regist: calcRegister_t, display_string: [*c]u8) void;
pub extern fn shortIntegerToDisplayString(regist: calcRegister_t, display_string: [*c]u8, determine_font: bool, base_override: u8) void;
pub extern fn fractionToDisplayString(regist: calcRegister_t, display_string: [*c]u8) void;
pub extern fn real34ToDisplayString(real34: *align(1) const real34_t, tag: u32, display_string: [*c]u8, font: *const font_t, max_width: i16, display_has_n_digits: i16, limit_exponent: bool, front_space: bool, limit_irfrac: c_int) void;
pub extern fn complex34ToDisplayString(complex34: *align(1) const complex34_t, display_string: [*c]u8, font: *const font_t, max_width: i16, display_has_n_digits: i16, limit_exponent: bool, front_space: bool, limit_irfrac: c_int, tag_angle: u16, tag_polar: bool) void;

pub fn registerShortIntegerPtr(reg: calcRegister_t) *align(1) u64 {
    const ptr = getRegisterDataPointer(reg) orelse unreachable;
    return @ptrCast(ptr);
}

pub fn setRegisterLongIntegerSign(reg: calcRegister_t, sign: u32) void {
    setRegisterTag(reg, sign);
}

pub const TI_PERC: u8 = 2;
pub const TI_PERCD: u8 = 3;

pub fn real34SetPositiveSign(value: *real34_t) void {
    value.bytes[15] &= 0x7f;
}

pub fn registerReal34Bytes(reg: calcRegister_t) *align(1) [16]u8 {
    const ptr = getRegisterDataPointer(reg) orelse unreachable;
    return @ptrCast(ptr);
}

pub fn registerReal34Ptr(reg: calcRegister_t) *align(1) real34_t {
    const ptr = getRegisterDataPointer(reg) orelse unreachable;
    return @ptrCast(ptr);
}

pub fn registerComplex34Ptr(reg: calcRegister_t) *align(1) complex34_t {
    const ptr = getRegisterDataPointer(reg) orelse unreachable;
    return @ptrCast(ptr);
}
